Ajout du check bluetooth + mise à jour de l'activité 'GameActivity' par Baptiste

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">EnGarde</string>
     <string name="boutonJouer">Jouer</string>
+    <string name="boutonQuitter">Quitter</string>
+    <string name="bluetoothStatus">"Checking ... \n"</string>
 </resources>
